-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
Qt Creator 4.11.0-beta1
Steps to reproduce:
- have Qt in PATH and start QC with clean settings and load WebAssembly plugin
bin/qtcreator -tcs -load WebAssembly
- check Tools -> Options -> Kits
Current result:
- although there is a Qt version found by QC refused to use it for the default kit
- when changing this manually it warns about an unsupported device type of the used Qt
- is duplicated by
-
QTCREATORBUG-23061 Qt for Windows kit does not consider desktop a valid device type
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-22828 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
278930,2 | WebAssembly: Set a restriction checker for WebAssembly Qt Versions | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |