WebAssembly: Set a restriction checker for WebAssembly Qt Versions

Task-number: QTCREATORBUG-22828
Change-Id: Ifaf1624b1fb53b4a9a58883b6b968fff2ae8fab6
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>